Give body a min height to prevent phone keyboard from squishing content

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,6 +51,7 @@ html, body {
   }
   font-family: $font-stack;
   height: 100%;
+  min-height: 300px;
 }
 
 
